--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Saira Extra Condensed', sans-serif;
 }
 
 html.body{
@@ -55,7 +56,51 @@ html.body{
     left: 20%;
     width: 80%;
     height: 100%;
-    background-color: whitesmoke;
     overflow-y: auto;
     padding:0 3% ;
+}
+
+section.descricao{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+section.descricao h2{
+    color: rgb(180, 0, 224);
+    font-size: 46px;
+}
+
+
+
+section.descricao h3{
+    margin: 10px 0;
+    color: #6c757d;
+    font-size: 26px;
+}
+
+section.descricao p{
+    color: #6c757d;
+    font-size: 20px;
+    margin-top: 40px;
+}
+
+.icons-social{
+    margin-top: 20px;
+}
+
+.icons-social a{
+    text-decoration: none;
+    color: whitesmoke;
+    background-color: violet;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    display: inline-block;
+    margin: 0 10px;
+    text-align: center;
+}
+
+.icons-social i{
+    line-height: 40px;
 }
